hphp/hack/test/typecheck/reactive/test_obj_set.php.exp
File "test_obj_set.php", line 9, characters 3-11:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
